added some landing page structure and content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <title>Indie Brew</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <nav>
+                <div id="logo">
+                    <img src="Assets/Logo.svg" alt="Indie Brew's Logo displaying two beer cups in cheers"/>
+                </div>
+                <ul id="menu">
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#" class="getStartedButton">Get Started <span>- it's free</span></a></li>
+                </ul>
+            </nav>
+            <section id="headerContent">
+                <div id="headerText">
+                    <h1>Your weekly personal feed digest.</h1>
+                    <p>With IndieBrew, get personal feeds from resources all around the web, including Reddit' HackerNews, IndieHackers, and much more.</p>
+                    <a href="#" id="getStartedButton" class="getStartedButton">Get Started <span>- it's free</span></a>
+                    <img src="Assets/User Avatars.svg" alt="Indie Brewer Users profile photos"/>
+                    <p>Join <span>32,642</span> IndieBrewers in curating their personal digest.</p>
+                </div>
+                <div id="headerPhoto">
+                    <img src="Assets/Feed Mockup.png" alt="Example of Indie Brew's Feed">
+                </div>
+            </section>
+        </header>
+        <section id="resourcesInfo">
+            <div id="resourceSectionText">
+                <h2>Curate your feed from dozens of resources</h2>
+                <p>We cover all major platforms which one could want to curate their feed from. Reddit, ProductHunt, IndieHackers, and so much more.</p>
+                <a href="#">See full list of resources 🠒</a>
+            </div>
+            <div id="resourceSectionImg">
+                <img src="Assets/Social Media Icons.png" alt="Social Media Icons"/>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
