--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="styles/styles.css">
     <title>Indie Brew</title>
 </head>
 <body>
-    <div class="wrapper">
-        <header>
+    <header>
+        <div class="wrapper">
             <nav>
                 <div id="logo">
                     <img src="Assets/Logo.svg" alt="Indie Brew's Logo displaying two beer cups in cheers"/>
@@ -22,17 +26,21 @@
             </nav>
             <section id="headerContent">
                 <div id="headerText">
-                    <h1>Your weekly personal feed digest.</h1>
-                    <p>With IndieBrew, get personal feeds from resources all around the web, including Reddit' HackerNews, IndieHackers, and much more.</p>
-                    <a href="#" id="getStartedButton" class="getStartedButton">Get Started <span>- it's free</span></a>
-                    <img src="Assets/User Avatars.svg" alt="Indie Brewer Users profile photos"/>
+                    <h1>Your weekly<br> personal feed digest.</h1>
+                    <p>With IndieBrew, get personal feeds from resources all around the web, including Reddit, HackerNews, IndieHackers, and much more.</p>
+                    <a href="#" class="getStartedButton">Get Started <span>- it's free</span></a>
+                    <div id="userAvatarsImg">
+                        <img src="Assets/User Avatars.svg" alt="Indie Brewer Users profile photos"/>
+                    </div>
                     <p>Join <span>32,642</span> IndieBrewers in curating their personal digest.</p>
                 </div>
                 <div id="headerPhoto">
                     <img src="Assets/Feed Mockup.png" alt="Example of Indie Brew's Feed">
                 </div>
             </section>
-        </header>
+        </div>
+    </header>
+    <div class="wrapper">
         <section id="resourcesInfo">
             <div id="resourceSectionText">
                 <h2>Curate your feed from dozens of resources</h2>
@@ -43,6 +51,50 @@
                 <img src="Assets/Social Media Icons.png" alt="Social Media Icons"/>
             </div>
         </section>
+        <section id="mobileInfo">
+            <div id="mobileSectionImg">
+                <img src="Assets/Phone Mockup.png" alt="Photo of curated mobile feed."/>
+            </div>
+            <div id="mobileSectionText">
+                <h2>Access your feed from the comfort of your phone.</h2>
+                <p>With native apps for both iOS and android, accessing your curated content has never been easier.</p>
+                <a href="#">Sign up for the waitlist 🠒</a>
+            </div>
+        </section>
     </div>
+    <footer>
+        <div class="wrapper">
+            <div id="footerProductDescription">
+                <h3>IndieBrew</h3>
+                <p>With IndieBrew, get personal feeds from resources all around the web, including Reddit, HackerNews, and much more.</p>
+                <p>Made with ❤ in the UK.</p>
+            </div>
+            <nav id="footerMenu">
+                <h4>Sitemap</h4>
+                <ul id="Sitemap">
+                    <li><a href="#">Homepage</a></li>
+                    <li><a href="#">Pricing</a></li>
+                </ul>
+                <h4>Resources</h4>
+                <ul id="resources">
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+                <h4>Company</h4>
+                <ul id="company">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+                <h4>Portfolios</h4>
+                <ul id="portfolios">
+                    <li><a href="#">HackerNews</a></li>
+                    <li><a href="#">Reddit</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
