working on index product info section styles

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <ul id="menu">
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Support</a></li>
-                    <li><a href="#" class="getStartedButton">Get Started <span>- it's free</span></a></li>
+                    <li><a href="#" class="getStartedButton">Get Started <span>— it's free</span></a></li>
                 </ul>
             </nav>
             <section id="headerContent">
                 <div id="headerText">
                     <h1>Your weekly<br> personal feed digest.</h1>
-                    <p>With IndieBrew, get personal feeds from resources all around the web, including Reddit, HackerNews, IndieHackers, and much more.</p>
-                    <a href="#" class="getStartedButton">Get Started <span>- it's free</span></a>
+                    <p id="headerIndieInfo">With IndieBrew, get personal feeds from resources all around the web, including Reddit, HackerNews, IndieHackers, and much more.</p>
+                    <a href="#" class="getStartedButton">Get Started <span>— it's free</span></a>
                     <div id="userAvatarsImg">
                         <img src="Assets/User Avatars.svg" alt="Indie Brewer Users profile photos"/>
                     </div>
@@ -43,7 +43,7 @@
     <div class="wrapper">
         <section id="resourcesInfo">
             <div id="resourceSectionText">
-                <h2>Curate your feed from dozens of resources</h2>
+                <h2>Curate your feed from dozens of resources.</h2>
                 <p>We cover all major platforms which one could want to curate their feed from. Reddit, ProductHunt, IndieHackers, and so much more.</p>
                 <a href="#">See full list of resources 🠒</a>
             </div>
